--- a/part1.1.html
+++ b/part1.1.html
@@ -34,15 +34,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center mt-5">
-                    <h1>A Bootstrap 5 Starter Template</h1>
+                    <h1>CA2: Data Manipulation and Validation</h1>
                     <p class="lead">This is Part 1.1</p>
                 </div>
                 <div class="col-lg-2 order-1 mb-3 d-flex flex-column gap-2 mx-auto align-items-stretch">
-                    <button name="1.1.1" class="btn btn-success btn-block" data-sql="SELECT * FROM employees LIMIT 100" onclick="reply_click(this)">1.1.1</button>
-                    <button name="1.1.2" class="btn btn-success btn-block">1.1.2</button>
-                    <button name="1.1.3" class="btn btn-success btn-block">1.1.3</button>
-                    <button name="1.1.4" class="btn btn-success btn-block">1.1.4</button>
-                    <button name="1.1.5" class="btn btn-success btn-block">1.1.5</button>
+                    <button name="1.1.1" class="btn btn-success btn-block" data-sql="SELECT * FROM departments LIMIT 1000" onclick="reply_click(this)">1.1.1</button>
+                    <button name="1.1.2" class="btn btn-success btn-block" data-sql="SELECT emp_id, first_name, last_name FROM employees LIMIT 1000" onclick="reply_click(this)">1.1.2</button>
+                    <button name="1.1.3" class="btn btn-success btn-block" data-sql="SELECT dept_name FROM departments LIMIT 1000" onclick="reply_click(this)">1.1.3</button>
+                    <button name="1.1.4" class="btn btn-success btn-block" data-sql="SELECT DISTINCT title FROM titles ORDER BY title LIMIT 1000" onclick="reply_click(this)">1.1.4</button>
+                    <button name="1.1.5" class="btn btn-success btn-block" data-sql="SELECT first_name, last_name FROM employees ORDER BY last_name asc LIMIT 1000" onclick="reply_click(this)">1.1.5</button>
                 </div>
                 <div class="col-lg-10 order-2 border-success">
                     <textarea id="commands" class="mb-5">TEXT</textarea>
