--- a/part1.3.html
+++ b/part1.3.html
@@ -23,9 +23,9 @@
             <div class="container">
                 <a class="navbar-brand" href="#">WebDev CA2</a>
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="part1.1.html">Part 1.1</a></li>
+                        <li class="nav-item"><a class="nav-link" href="part1.1.html">Part 1.1</a></li>
                         <li class="nav-item"><a class="nav-link" href="part1.2.html">Part 1.2</a></li>
-                        <li class="nav-item"><a class="nav-link" href="part1.3.html">Part 1.3</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="part1.3.html">Part 1.3</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,14 +35,25 @@
             <div class="row">
                 <div class="col-lg-12 text-center mt-5">
                     <h1>CA2: Data Manipulation and Validation</h1>
-                    <p class="lead">This is Part 1.1</p>
+                    <p class="lead">This is Part 1.3</p>
                 </div>
                 <div class="col-lg-2 order-1 mb-3 d-flex flex-column gap-2 mx-auto align-items-stretch">
-                    <button name="1.1.1" class="btn btn-success btn-block" data-sql="SELECT * FROM departments LIMIT 1000" onclick="reply_click(this)">1.1.1</button>
-                    <button name="1.1.2" class="btn btn-success btn-block" data-sql="SELECT emp_id, first_name, last_name FROM employees LIMIT 1000" onclick="reply_click(this)">1.1.2</button>
-                    <button name="1.1.3" class="btn btn-success btn-block" data-sql="SELECT dept_name FROM departments LIMIT 1000" onclick="reply_click(this)">1.1.3</button>
-                    <button name="1.1.4" class="btn btn-success btn-block" data-sql="SELECT DISTINCT title FROM titles ORDER BY title LIMIT 1000" onclick="reply_click(this)">1.1.4</button>
-                    <button name="1.1.5" class="btn btn-success btn-block" data-sql="SELECT first_name, last_name FROM employees ORDER BY last_name asc LIMIT 1000" onclick="reply_click(this)">1.1.5</button>
+                    <button name="1.3.1" class="btn btn-success btn-block" data-sql="SELECT dept_manager.dept_id, COUNT(dept_manager.emp_id) AS ‘num_empGender’, employees.gender 
+                    FROM employees, dept_manager WHERE (gender = 'F' or gender = 'M') 
+                    AND dept_manager.emp_id = employees.emp_id
+                    GROUP BY gender, dept_id ORDER BY dept_id LIMIT 1000" onclick="reply_click(this)">1.3.1</button>
+                    <button name="1.3.2" class="btn btn-success btn-block" data-sql="SELECT e.gender, AVG(s.salary) AS 'AVG_salary', t.title FROM employees e
+                    INNER JOIN salaries s ON s.emp_id=e.emp_id INNER JOIN titles t ON t.emp_id=e.emp_id
+                    WHERE title LIKE 'Technique Leader' GROUP BY e.gender LIMIT 1000" onclick="reply_click(this)">1.3.2</button>
+                    <button name="1.3.3" class="btn btn-success btn-block" data-sql="SELECT COUNT(salaries.emp_id) FROM salaries WHERE salary >= 90000 AND salary <= 90040 
+                    AND to_date = '9999-01-01' LIMIT 1000" onclick="reply_click(this)">1.3.3</button>
+                    <button name="1.3.4" class="btn btn-success btn-block" data-sql="SELECT first_name, last_name, salary to_date FROM employees
+                    INNER JOIN salaries ON employees.emp_id = salaries.emp_id 
+                    WHERE to_date = '9999-01-01' AND salary > 90000
+                    GROUP BY first_name, last_name ORDER BY last_name, first_name DESC LIMIT 1000" onclick="reply_click(this)">1.3.4</button>
+                    <button name="1.3.5" class="btn btn-success btn-block" data-sql="SELECT employees.first_name, employees.last_name, salaries.salary, salaries.from_date, salaries.to_date
+                    FROM employees, salaries WHERE employees.emp_id = 10012 
+                    AND salaries.emp_id = 10012 LIMIT 1000" onclick="reply_click(this)">1.3.5</button>
                 </div>
                 <div class="col-lg-10 order-2 border-success">
                     <textarea id="commands" class="mb-5">TEXT</textarea>
