--- a/part1.3.html
+++ b/part1.3.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="SQLite Exercise" />
-        <meta name="author" content="" />
+        <meta name="author" content="Y. Isset" />
         <title>WebDev CA2</title>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.css">
