sql-data part1.1 and 1.2 update

--- a/part1.1.html
+++ b/part1.1.html
@@ -42,7 +42,7 @@
                     <button name="1.1.2" class="btn btn-success btn-block" data-sql="SELECT emp_id, first_name, last_name FROM employees LIMIT 1000" onclick="reply_click(this)">1.1.2</button>
                     <button name="1.1.3" class="btn btn-success btn-block" data-sql="SELECT dept_name FROM departments LIMIT 1000" onclick="reply_click(this)">1.1.3</button>
                     <button name="1.1.4" class="btn btn-success btn-block" data-sql="SELECT DISTINCT title FROM titles ORDER BY title LIMIT 1000" onclick="reply_click(this)">1.1.4</button>
-                    <button name="1.1.5" class="btn btn-success btn-block" data-sql="SELECT first_name, last_name FROM employees ORDER BY last_name asc LIMIT 1000" onclick="reply_click(this)">1.1.5</button>
+                    <button name="1.1.5" class="btn btn-success btn-block" data-sql="SELECT first_name, last_name FROM employees ORDER BY last_name ASC LIMIT 1000" onclick="reply_click(this)">1.1.5</button>
                 </div>
                 <div class="col-lg-10 order-2 border-success">
                     <textarea id="commands" class="mb-5">TEXT</textarea>
